--- a/src/styles/components/_customInput.scss
+++ b/src/styles/components/_customInput.scss
@@ -1,25 +1,26 @@
 .form {
-    width: 300px;
-    display: flex;
-    justify-content: space-between;
-    &__input {
-        border-radius: 10px;
-        border: none;
-        outline: none;
-    }
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  margin: 2em;
+  &__input {
+    border-radius: 10px;
+    border: none;
+    outline: none;
+  }
 
-    &__btn {
-        border-radius: 10px;
-        border: none;
-        background-color: rgb(80, 231, 135);
-        color: #fff;
-        width: 80px;
-        height: 30px;
-        cursor: pointer;
-        transition: .2s ease-in;
+  &__btn {
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(80, 231, 135);
+    color: #fff;
+    width: 80px;
+    height: 30px;
+    cursor: pointer;
+    transition: 0.2s ease-in;
 
-        &:hover {
-            transform: scale(1.2);
-        }
+    &:hover {
+      transform: scale(1.2);
     }
+  }
 }
