--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -60,22 +60,22 @@ select {
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
+@-webkit-keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
   }
 }
-*,
-*::before,
-*::after {
-  -webkit-animation-duration: 0.01ms !important;
-          animation-duration: 0.01ms !important;
-  -webkit-animation-iteration-count: 1 !important;
-          animation-iteration-count: 1 !important;
-  transition-duration: 0.01ms !important;
-  scroll-behavior: auto !important;
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
 }
-
 * {
   padding: 0;
   margin: 0;
@@ -89,6 +89,139 @@ body {
   background-color: rgb(219, 217, 217);
 }
 
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-15px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-15px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+.nav {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-around;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #343434;
+  z-index: 100;
+}
+.nav__menu {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+.nav__menu__logo {
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+.nav__menu__logo img {
+  height: 50px;
+}
+.nav__menu__label, .nav__menu__input {
+  display: none;
+}
+.nav__menu__links {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav__menu__links__items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav__menu__links__items__item {
+  margin: 15px;
+  list-style: none;
+  transition: 0.2s ease-in;
+  --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
+}
+.nav__menu__links__items__item a {
+  color: #6f6f6f;
+  text-decoration: none;
+  font-size: 1.1em;
+  cursor: pointer;
+}
+.nav__menu__links__items__item::after {
+  content: "";
+  display: block;
+  background: white;
+  width: 90%;
+  margin-top: 3px;
+  height: 3px;
+  -webkit-clip-path: var(--clippy);
+          clip-path: var(--clippy);
+  transition: -webkit-clip-path 0.5s;
+  transition: clip-path 0.5s;
+  transition: clip-path 0.5s, -webkit-clip-path 0.5s;
+}
+.nav__menu__links__items__item:hover {
+  --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+@media (max-width: 800px) {
+  .nav__menu__label {
+    display: block;
+  }
+  .nav__menu__links {
+    position: fixed;
+    top: 80px;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    -webkit-clip-path: circle(0 at center);
+            clip-path: circle(0 at center);
+    transition: -webkit-clip-path 1s ease-in-out;
+    transition: clip-path 1s ease-in-out;
+    transition: clip-path 1s ease-in-out, -webkit-clip-path 1s ease-in-out;
+    background: rgba(52, 52, 52, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+  .nav__menu__links__items {
+    display: flex;
+    flex-direction: column;
+  }
+  .nav__menu__links__items__item a {
+    color: white;
+  }
+  .nav__menu__input:checked + .nav__menu__links {
+    -webkit-clip-path: circle(100% at center);
+            clip-path: circle(100% at center);
+  }
+}
+
+.beat {
+  -webkit-animation: bounce 2s infinite;
+          animation: bounce 2s infinite;
+}
+
 .card {
   width: 250px;
   height: 120px;
@@ -97,6 +230,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 2em;
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
@@ -104,17 +238,20 @@ body {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.card img {
+.card__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 5px;
+  height: 15%;
+  width: 100%;
+  padding: 0 0.2em;
+}
+.card__top img {
   width: 25px;
   height: 25px;
-  position: absolute;
-  top: 8px;
-  left: 8px;
 }
-.card__deleteBtn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
+.card__top__deleteBtn {
   background-color: transparent;
   border: none;
   color: #777575;
@@ -122,47 +259,84 @@ body {
   cursor: pointer;
   transition: 0.2s ease-in;
 }
-.card__deleteBtn:hover {
+.card__top__deleteBtn:hover {
   transform: scale(1.2);
 }
-.card__top {
+.card__bottom {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  width: 90%;
-  height: 50%;
+  width: 100%;
+  height: 85%;
 }
-.card__top p {
+.card__bottom .check {
+  margin-left: 5px;
+}
+.card__bottom p {
   color: #343434;
   font-weight: bold;
+  margin-left: 10px;
 }
-.card__bottom {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.card__bottom__btn {
-  border-radius: 10px;
-  border: none;
-  color: #fff;
+.card__bottom input[type=checkbox] {
+  position: relative;
   cursor: pointer;
-  width: 65px;
-  height: 25px;
-  font-size: 0.8em;
-  transition: 0.2s ease-in;
 }
-.card__bottom__btn:hover {
-  transform: scale(1.1);
+.card__bottom input[type=checkbox]:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  border: 2px solid #555555;
+  border-radius: 3px;
+  background-color: white;
 }
-.card__bottom__btn--finish {
-  background-color: rgb(135, 117, 216);
+.card__bottom input[type=checkbox]:checked:after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 10px;
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 2px;
+  left: 6px;
+}
+
+.cardList {
+  display: flex;
+}
+@media (max-width: 800px) {
+  .cardList {
+    flex-direction: column;
+  }
+}
+.cardList .finished,
+.cardList .notFinished {
+  width: 300px;
+  margin: 15px;
+}
+.cardList .finished__title,
+.cardList .notFinished__title {
+  display: flex;
+  justify-content: space-between;
+}
+.cardList .finished__title button,
+.cardList .notFinished__title button {
+  width: 20px;
+  height: 20px;
+  background-color: rgba(255, 0, 0, 0);
+  border: none;
+  cursor: pointer;
 }
 
 .form {
   width: 300px;
   display: flex;
   justify-content: space-between;
+  margin: 2em;
 }
 .form__input {
   border-radius: 10px;
@@ -181,4 +355,124 @@ body {
 }
 .form__btn:hover {
   transform: scale(1.2);
+}
+
+.pokeCard {
+  width: 330px;
+  height: 400px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #343434;
+  color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.pokeCard img {
+  width: 200px;
+  height: 200px;
+}
+.pokeCard .pokeCard__data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.pokeCard .pokeCard__data .pokeName {
+  font-size: 25px;
+  letter-spacing: 0.5em;
+}
+.pokeCard .pokeData {
+  width: 330px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+.pokeCard .pokeData__types__images {
+  display: flex;
+  gap: 5px;
+}
+.pokeCard .pokeData__types__images img {
+  width: 25px;
+  height: 25px;
+}
+.pokeCard .pokeData .attack {
+  border: 1px solid orange;
+  border-width: 0 2px;
+  width: 110px;
+}
+
+.searchBar {
+  width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #fff;
+  border-radius: 5px;
+  color: #6f6f6f;
+}
+.searchBar img {
+  width: 20px;
+  height: 20px;
+  padding: 0.2em;
+}
+.searchBar input[type=text] {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+}
+.searchBar button {
+  background-color: transparent;
+  border: none;
+  padding: 0.2em;
+  cursor: pointer;
+}
+.searchBar button img {
+  width: 30px;
+  height: 30px;
+}
+
+.poke {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2em;
+}
+
+/* 404 */
+.errorDiv {
+  width: 100%;
+  height: 50vh;
+  display: grid;
+  place-content: center;
+  color: #3f3f3f;
+}
+
+.errorImage {
+  -webkit-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+}
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.todo {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
